--- a/Fall.csproj
+++ b/Fall.csproj
@@ -44,6 +44,18 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Camera.cs" />
+    <Compile Include="src\Entities\Block.cs" />
+    <Compile Include="src\Entities\Entity.cs" />
+    <Compile Include="src\Entities\Platform.cs" />
+    <Compile Include="src\Entities\Player.cs" />
+    <Compile Include="src\Level_Loader.cs" />
+    <Compile Include="src\StartScreen.cs" />
+    <Compile Include="src\GameHandler.cs" />
+    <Compile Include="src\Traits\Gravity.cs" />
+    <Compile Include="src\Traits\Rigidbody.cs" />
+    <Compile Include="src\Traits\Trait.cs" />
+    <Compile Include="src\Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -58,6 +70,12 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
+    <None Include="Content\Cursor.xnb" />
+    <None Include="Content\StartButton.xnb" />
+    <None Include="Content\TitleScreen.xnb" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="src\Particles\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
