--- a/Fall.csproj
+++ b/Fall.csproj
@@ -46,9 +46,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Camera.cs" />
     <Compile Include="src\Entities\Block.cs" />
+    <Compile Include="src\Entities\Branch.cs" />
+    <Compile Include="src\Entities\Bug.cs" />
     <Compile Include="src\Entities\Entity.cs" />
+    <Compile Include="src\Entities\Leaf.cs" />
     <Compile Include="src\Entities\Platform.cs" />
     <Compile Include="src\Entities\Player.cs" />
+    <Compile Include="src\Entities\Tree.cs" />
     <Compile Include="src\Level_Loader.cs" />
     <Compile Include="src\StartScreen.cs" />
     <Compile Include="src\GameHandler.cs" />
@@ -70,9 +74,16 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
+    <None Include="Content\acorn.xnb" />
+    <None Include="Content\branch.xnb" />
+    <None Include="Content\bug.xnb" />
+    <None Include="Content\cloud.xnb" />
     <None Include="Content\Cursor.xnb" />
+    <None Include="Content\Fall_Concept_Screen.xnb" />
+    <None Include="Content\leaf.xnb" />
     <None Include="Content\StartButton.xnb" />
     <None Include="Content\TitleScreen.xnb" />
+    <None Include="Content\tree.xnb" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\Particles\" />
