Changed movement, added pseudo random generation
Wow I don't know what I did.  I don't even know if it was good or not.  I just hope it's progress.

--- a/Fall.csproj
+++ b/Fall.csproj
@@ -49,6 +49,7 @@
     <Compile Include="src\Entities\Branch.cs" />
     <Compile Include="src\Entities\Bug.cs" />
     <Compile Include="src\Entities\Entity.cs" />
+    <Compile Include="src\Entities\GameMaster.cs" />
     <Compile Include="src\Entities\Leaf.cs" />
     <Compile Include="src\Entities\Platform.cs" />
     <Compile Include="src\Entities\Player.cs" />
